Impl ditta repo